--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
 .App {
+  font-family: "Courier New", Courier, monospace sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 10px 20px;
+}
+
+input[type="radio"] {
+  width: 20px;
+  height: 1.5em;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  background-image: url("https://c4.wallpaperflare.com/wallpaper/460/140/13/sci-fi-futuristic-city-dark-theme-fantasy-wallpaper-preview.jpg");
+}
+
+.main-container {
+  margin-top: 50px;
+}
+
+.container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+.sub-container {
+  flex-direction: column;
+  margin: 20px;
+  background-color: black;
+  border-radius: 10px;
+  padding: 10px;
+  color: rgb(17, 230, 17);
+}
+
+.inner-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 300px;
+  color: rgb(17, 230, 17);
+}
+
+.input {
+  width: 400px;
+  height: 25px;
+  font-size: larger;
+}
+
+.search {
+  color: rgb(17, 230, 17);
+  margin-top: 2em;
+}
+
+.rating {
   color: white;
+  display: flex;
+  margin-top: 5px;
+  margin-left: 2px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img {
+  width: 290px;
+  height: 325px;
+  border-radius: 10px;
 }
